2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* NEWS:
	* configure.in:
	
	Update NEWS and bump release to 0.8.10.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:

	Fix id3lib dependency check on configure.
	Patch from Peter Adolphs closes bgo #491057.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* Makefile.am:
	
	Remove internal NDesk-DBus-sharp. Fixes bgo #553292.

2008-09-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS: Update for the upcoming 0.8.10 release.

2008-09-28  Diego Escalante Urrelo  <diegoe@gnome.org>

	Bug 308208 – Play Album window does not show all albums

	* b/data/muine.schemas.in
	* src/Album.cs
	* src/SongDatabase.cs:

	Revert an old commit removing only_complete_albums functionality.

	You can now choose wheter muine should or should not show incomplete
	albums using a gconf key: /apps/muine/only_complete_albums.
	This is the	old-old-really-old behaviour of muine of including every
	album in the list no matter it is not complete.

2008-09-28  Iain Holmes  <iain@gnome.org>

	Bug 336248 – Notifications using libnotify

	* data/muine.schemas.in: Add key to turn on notifications.
	Off by default

	* plugins/Makefile.am: Actually install the TrayIcon plugin

	* plugins/TrayIcon.cs: Add Notifications using libnotify, if present
	and turned on.

	* plugins/TrayIcon.dll.config: Add map for libnotify and gobject

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* plugins/TrayIcon.cs:
	* plugins/TrayIcon.xml:

	Improve tray icon usuability. Fixes bgo #312110 and #378019.
	Patch from Ryan Lortie (desrt) <desrt@desrt.ca> minor
	change on menu from me.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* data/muine.schemas.in:
	* src/PlaylistWindow.cs:

	Fix main window position after quit muine.
	Closes bgo #339820. Patch from Adolfo Blásquez
	<code@infinicode.org>." 

2008-09-23  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* plugins/Makefile.am:
	* plugins/inotify-glue.c (inotify_glue_watch),